--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-create-ref": "^1.0.1"
   },
   "scripts": {}
 }
